--- a/25k-Dauda-Lawal.html
+++ b/25k-Dauda-Lawal.html
@@ -4,7 +4,7 @@
 <head>
 	<script src="Dauda Lawal-active.js"></script>
 <script src="alladz.js"></script>
-<title>Ahmad-Aliyu ₦25,000 NEW YEAR EMPOWERMENT CASH GRANT FOR ZAMFARA STATE</title>
+<title>Dauda-Lawal ₦25,000 NEW YEAR EMPOWERMENT CASH GRANT FOR ZAMFARA STATE</title>
 <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhJklyWTP9Klfd1WMp3AOC69dhhG0RDdmCKccBjtC7IWwd4eDMRh5iEQNgbn0pqJ2Az4fWmFJSAZCqGdfKKz80qQvwkwTNfxi9CQ0Np335luFGYViZzTOz-D4K5o0y0wSGraYalluxFEF7tp0UMgzw44mm65G2USE6t3I6ndHi3x28fNzfeJxfVTAQRvHA/s16000/Untitled-removebg-preview.png">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -335,7 +335,7 @@ Ok
 </div>
   
 
-  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimD7DKh0W4KkzA0UD_72AZYv-AJIbSeFRJr_hrFcmRh9ZaijJtNazkqmpQWTenWussskeNsGzUp9q9T2KQ6GzQA0wBXygFs12LnTTJ7m9o3crlU5Tt-U4FRdckOiHTttHZyoTZtSVHiFNseDatpRAmuXByiTZBgPdo87mhi5gXUdWJf9u08wWuTMCAWtc/s16000/GgMpIp1XwAAThKv.jpg" style="width:100%;" />
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg9P680y6gkSkdtpsCPWB12jPQlag6jOvMoXenxtz0w5fuB-vrHKgQVWlCucGabIbkP1t-vr0SPw5JvlRjzXUuMgA4AISM3m4QUkziQfuPz76ZIM0CQQUwOmL2zQh70AIkJ3pbJoD20MZM5MZgNjh0gzoJyn-f9jPPRlDj_t38hKLXdpWnHmZyIct3u33I/w640-h427/1001313502-scaled.jpg" style="width:100%;" />
 <h1 class="heading heading--h1">
 Hello!
 </h1>
